# trait-seeker

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/: docker-compose.yml
src/: config.py  main.py
src/api/: trait_seeker.py
src/core/: data_loader.py  model.py  predict.py  predictsvm.py  test.py  testsvm.py  train.py  trainsvm.py  trait_seeker.py
src/model/: __init__.py
src/utils/: __init__.py
